--- a/views/albums.ejs
+++ b/views/albums.ejs
@@ -114,7 +114,7 @@
                     <% albumObjects.forEach(albumObj => { %>
                        
                 
-                        <a href="http://localhost:3000/album/<%= albumObj.shortName %> ">
+                        <a href="/album/<%= albumObj.shortName %> ">
                             <img height="30%" width="20%"src="/images/<%= albumObj.albumCover %>" class="card-img-top" alt="...">
                              
                             <% }) %>
