--- a/views/mixtapes.ejs
+++ b/views/mixtapes.ejs
@@ -114,7 +114,7 @@
                     <% mixtapeObjects.forEach(mixtapeObj => { %>
                        
                 
-                        <a href="http://localhost:3000/album/<%= mixtapeObj.shortName %> ">
+                        <a href="/album/<%= mixtapeObj.shortName %> ">
                             <img height="30%" width="20%"src="/images/<%= mixtapeObj.albumCover %>" class="card-img-top" alt="...">
                              
                             <% }) %>
