--- a/views/eps.ejs
+++ b/views/eps.ejs
@@ -114,7 +114,7 @@
                     <% epObjects.forEach(epObj => { %>
                        
                 
-                        <a href="http://localhost:3000/album/<%= epObj.shortName %> ">
+                        <a href="/album/<%= epObj.shortName %> ">
                             <img height="30%" width="20%"src="/images/<%= epObj.albumCover %>" class="card-img-top" alt="...">
                              
                             <% }) %>
